# dsspellchecker

./: README.md  pyproject.toml
spellchecker/: trim.py
spellchecker/data/: file_exts.lst  general.lst
src/spellchecker/: __init__.py  db_utils.py  utils.py
src/spellchecker/data/: acronyms.lst  exact_others.lst  names.lst  non_english.lst  places.lst
src/spellchecker/dictionary/: acronyms.lst  exact_others.lst  file_exts.lst  general.lst  names.lst  non_english.lst  unit_abbrevs.lst  units.lst
tests/: test_spellcheck.py  test_validate_word.py
