[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spellchecker"
version = "0.1.0"
authors = [
    {name = "Bob Dattore", email = "dattore@ucar.edu"},
]
description = ""
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python",
    "License :: OSI Approved :: MIT License",
]

[project.scripts]
build_spellchecker_db = "spellchecker.pkg_init:build_db"

[tool.setuptools.package-data]
spellchecker = ["data/*.lst", "data/*.db"]
