[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spellchecker"
version = "0.1.0"
authors = [
    {name = "Bob Dattore", email = "dattore@ucar.edu"},
]
description = ""
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python",
    "License :: OSI Approved :: MIT License",
]

[project.scripts]
build_spellchecker_db = "spellchecker.db_utils:build_db"
dump_spellchecker_db = "spellchecker.db_utils:dump_db"
add_spellchecker_words = "spellchecker.db_utils:add_words"
add_spellchecker_acronym = "spellchecker.db_utils:add_acronym"

[tool.setuptools.package-data]
spellchecker = ["data/*.lst", "data/*.db"]
