[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dsspellchecker"
version = "0.1.0"
authors = [
    {name = "Bob Dattore", email = "dattore@ucar.edu"},
]
description = ""
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "libpkg @ git+https://github.com/rda-dattore/testpkg#subdirectory=libpkg",
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python",
    "License :: OSI Approved :: MIT License",
]

[project.scripts]
spellchecker_manage = "spellchecker.db_utils:spellchecker_manage"

[tool.setuptools.package-data]
spellchecker = ["dictionary/*.lst", "dictionary/valids.db"]
